[tool.poetry]
name = "logging-module"
version = "0.1.0"
description = "logging files module for adding to other projects"
authors = ["Dan Nelson <danelson@nwi.net>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "logging_module"}]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
